--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -9,7 +9,7 @@
 
 .form-container {
   color: white;
-  max-width: 1100px;
+  max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
   padding: 1em;
@@ -17,7 +17,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(179, 183, 238, 0.77);
+  background-color: rgb(179, 183, 238);
 }
 
 .title-container,
@@ -76,5 +76,5 @@
   background-color: #1f2134;
   color: white;
   width: 200px;
-  margin: 0 auto;
+  margin: 10px 50px;
 }
