--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,10 +1,21 @@
+.container {
+  background-color: #eeeffb;
+}
 .form-title {
   color: white;
   border-radius: 10px;
-  text-align: center;
   margin: 10px 50px 10px 50px;
   padding: 20px;
-  background-color: #b3b7ee;
+  height: 50px;
+  background-color: rgb(179, 183, 238);
+  background-image: url("../tumblr_prm9dzAfBR1tba1dg_540.png");
+  background-repeat: no-repeat;
+  background-size: 300px;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
 }
 
 .form-container {
@@ -34,6 +45,7 @@
   justify-content: space-between;
   background-color: rgb(179, 183, 238, 0.77);
   align-items: center;
+  margin-top: 10px;
 }
 
 .title-label,
@@ -59,7 +71,7 @@
 #rating,
 #author {
   background-color: white;
-  /* margin-left: 300px; */
+  margin-left: 100px;
   height: 23px;
   width: 200px;
 }
@@ -68,13 +80,15 @@
 #review {
   background-color: white;
   align-items: flex-end;
+  margin-left: 100px;
   height: 80px;
   width: 200px;
 }
 
 .form-button {
-  background-color: #1f2134;
+  background: rgb(39, 38, 64);
   color: white;
   width: 200px;
   margin: 10px 50px;
+  padding: 10px 5px;
 }
