--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -7,7 +7,7 @@
   margin: 10px 50px 10px 50px;
   padding: 20px;
   height: 50px;
-  background-color: rgb(179, 183, 238);
+  background-color: rgb(179, 183, 238, 0.8);
   background-image: url("../tumblr_prm9dzAfBR1tba1dg_540.png");
   background-repeat: no-repeat;
   background-size: 300px;
