added sidebar for onclick hamburger menu

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,8 +1,6 @@
 .home-results-container {
-  display: grid;
-  grid-template-areas:
-    "T"
-    "V";
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
