--- a/src/components/Details.css
+++ b/src/components/Details.css
@@ -1,9 +1,10 @@
 .details-container {
   background-color: #eeeffb;
-}
-
-h1 {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
 
 .details-full {
@@ -26,8 +27,13 @@ h1 {
   display: grid;
   grid-area: T;
   background-color: #272640;
-  color: #b4b8ee;
-  margin-bottom: 10px;
+  color: #ffffff;
+  margin-bottom: 15px;
+  margin-top: 25px;
+  font-family: "Abril Fatface", cursive;
+  text-shadow: 2px 2px 5px #f72585;
+  text-decoration: underline;
+  border: 2px double #c8e7ff;
 }
 
 .details-video {
@@ -44,20 +50,67 @@ h1 {
   background-color: #272640;
   color: #b4b8ee;
   height: 355px;
+  font-family: "Yeseva One", cursive;
+  font-size: 16px;
 }
 
 .details-review {
   display: grid;
   grid-area: R;
-  width: 1000px;
+  width: 80vw;
   padding: 50px;
   text-align: left;
   background-color: #b4b8ee;
   margin-top: 15px;
+  box-shadow: 5px 2px 10px #272640;
 }
 
 .details-button {
   display: grid;
   grid-area: D;
-  margin: 10px 500px;
+  margin: 25px 450px;
+  background: rgb(39, 38, 64);
+  color: #eeeffb;
+  font-family: "Abril Fatface", cursive;
+  border-radius: 15px;
+}
+
+.details-button:hover {
+  background: #f72585;
+  color: #eeeffb;
+  box-shadow: 5px 10px 18px rgb(39, 38, 64);
+  transition: 0.2s ease-in-out;
+}
+
+@media only screen and (max-width: 420px) {
+  iframe {
+    width: 280px;
+    height: 158px;
+  }
+  .details-container {
+    background-color: #dee2ff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+  }
+  .details-full {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+  }
+  .details-title {
+    height: 200px;
+  }
+
+  .details-right {
+    color: white;
+    font-family: "Yeseva One", cursive;
+    font-size: 16px;
+  }
+
+  .details-review {
+  }
 }
