--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -89,10 +89,19 @@
 
 .form-button {
   background: rgb(39, 38, 64);
-  color: white;
+  color: #eeeffb;
+  font-family: "Abril Fatface", cursive;
   width: 200px;
   margin: 10px 50px;
   padding: 10px 5px;
+  border-radius: 15px;
+}
+
+.form-button:hover {
+  background: #eeeffb;
+  color: rgb(39, 38, 64);
+  box-shadow: 5px 10px 18px rgb(39, 38, 64);
+  transition: 0.2s ease-in-out;
 }
 
 @media only screen and (max-width: 375px) {
