--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -13,6 +13,15 @@
   text-align: center;
   font-size: 1.25rem;
   color: #b3b7ee;
+  font-family: "Yeseva One", cursive;
+  font-weight: 500;
+}
+
+.home-title:hover {
+  color: #f72585;
+  border-bottom: 1px solid #fff;
+  font-size: 1.4rem;
+  transition: 0.3s ease-in-out;
 }
 
 a:link {
