--- a/src/components/Details.css
+++ b/src/components/Details.css
@@ -24,10 +24,9 @@
 
 .details-title {
   text-align: center;
-  /* display: grid; */
   grid-area: T;
   background-color: #272640;
-  color: #ffffff;
+  color: #c8e7ff;
   margin-bottom: 15px;
   margin-top: 25px;
   font-family: "Abril Fatface", cursive;
@@ -64,13 +63,14 @@
   background-color: #b4b8ee;
   margin-top: 15px;
   box-shadow: 5px 2px 10px #272640;
+  font-family: "Poiret One";
 }
 
 .details-button {
   display: grid;
   grid-area: D;
   margin: 0 auto;
-  width: 75px;
+  width: 200px;
   background: rgb(39, 38, 64);
   color: #eeeffb;
   font-family: "Abril Fatface", cursive;
@@ -118,5 +118,6 @@
 
   .details-button {
     margin-top: 10px;
+    width: 75px;
   }
 }
