--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,7 +4,8 @@
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  background-color: #000807;
+  background-color: #7f5a83;
+  background-image: linear-gradient(315deg, #7f5a83 0%, #061d2d 74%);
 }
 
 .home-title {
